--- a/_config.yml
+++ b/_config.yml
@@ -7,4 +7,4 @@ description: "COVID19 Severity Prediction"
 keywords: "COVID19"
 
 markdown: kramdown
-exclude: ["Rakefile", "LICENSE", "readme.markdown"]
+exclude: ["Rakefile", "LICENSE", "readme.md"]
