--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,5 +21,9 @@ jobs:
         # Optional - x64 or x86 architecture, defaults to x64
         architecture: 'x64' 
     # You can test your matrix by printing the current Python version
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
     - name: Generate county search results
       run: python functions/update_search.py
