--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,8 +22,7 @@ jobs:
         architecture: 'x64' 
     # You can test your matrix by printing the current Python version
     - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+      run: 
+        pip install -r requirements.txt
     - name: Generate county search results
       run: python functions/update_search.py
