--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,6 +34,7 @@ jobs:
     - uses: actions/checkout@v2
     - name: Install dependencies
       run: |
+        conda install pip
         pip install -r requirements.txt
         bokeh sampledata
         conda install -c plotly plotly-orca
