--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,8 +34,7 @@ jobs:
     - uses: actions/checkout@v2
     - name: Install dependencies
       run: |
-        conda install pip
-        pip install -r requirements.txt
+        conda install -r requirements.txt
         bokeh sampledata
         conda install -c plotly plotly-orca
     # Runs a single command using the runners shell
