--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,17 +30,8 @@ jobs:
     - uses: actions/checkout@v2
     - name: Install dependencies
       run: |
-        conda install numpy
-        conda install pandas
-        conda install datetime
-        conda install plotly
-        conda install plotly.express
-        conda install bokeh
-        conda install sklearn
-        conda install IPython
-        conda install tqdm
-        conda install psutil
-        conda install requests
+        conda install pip
+        pip install -r requirements.txt        
         conda install -c plotly plotly-orca
         bokeh sampledata
         which python
