--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,8 @@
 **.ipynb_checkpoints*
 **cache*
 **.pkl
+!functions/update_search.pkl
+!functions/past_dates.pkl
 **.json
 **.pt
 **.pdf
@@ -19,6 +21,7 @@
 data_hospital_level/processed/*hospital*
 *.doc
 *.txt
+!requirements.txt
 *.docx
 _site
 functions/_hidden_preds.csv
